--- a/locale/it/LC_MESSAGES/meerk40t.po
+++ b/locale/it/LC_MESSAGES/meerk40t.po
@@ -16810,7 +16810,7 @@ msgstr "Suggerimento: La visualizzazione attuale può essere fissata con Ctrl-Sh
 msgid "Call online help-page"
 msgstr "Richiama la pagina della guida in linea"
 
-msgid "Splitting Rasters"
+msgid "Splitting rasters"
 msgstr "Tratta i Raster separatamente"
 
 msgid "System font locations"
