--- a/locale/de/tips.txt
+++ b/locale/de/tips.txt
@@ -76,3 +76,6 @@ Die Material-Bibliothek verwenden, um Einstellungen zu teilen, oder welche aus d
 cmd=window open MatManager
 img=https://github.com/meerk40t/meerk40t/assets/2670784/73f4bdf9-974f-4245-8b16-8812aa5f0762
 version=1.0
+
+tip=Soll eine normale Graphik in ein Vektor-Objekt umgewandelt werden? Öffne das Eigenschaftsfenster der Graphik mit einem Doppelklick und wechsle zum Vektorierungspanel...
+img=https://github.com/meerk40t/meerk40t/assets/2670784/24f98e75-65ab-42f9-90c0-a9c3a6a6ac38
