--- a/locale/de/LC_MESSAGES/meerk40t.po
+++ b/locale/de/LC_MESSAGES/meerk40t.po
@@ -18643,3 +18643,6 @@ msgstr "Labels anzeigen"
 #: ./meerk40t\gui\propertypanels\wobbleproperty.py:103
 msgid "Wobble Speed:"
 msgstr "Wobble Faktor"
+
+msgid "Generating..."
+msgstr "Generierung läuft..."
