--- a/locale/de/LC_MESSAGES/meerk40t.po
+++ b/locale/de/LC_MESSAGES/meerk40t.po
@@ -16788,3 +16788,30 @@ msgstr "Brenne später"
 #: meerk40t/core/elements/element_treeops.py:449
 msgid "Burn last"
 msgstr "Brenne zuletzt"
+
+msgid "Turns the coolant for the active device on"
+msgstr "Schaltet die Kühlung für den aktiven Laser an"
+
+msgid "Turns the coolant for the active device off"
+msgstr "Schaltet die Kühlung für den aktiven Laser aus"
+
+msgid "No coolant method found."
+msgstr "Keine Kühl-Methode gefunden."
+
+msgid "Coolant activated for device {device.label}"
+msgstr "Kühlung für {device.label} eingeschaltet"
+
+msgid "Coolant deactivated for device {device.label}"
+msgstr "Kühlung für {device.label} ausgeschaltet"
+
+msgid "Registered coolant-interfaces:"
+msgstr "Registrierte Kühl-Methoden:"
+
+msgid "Configure"
+msgstr "Konfiguration"
+
+msgid "Coolant on"
+msgstr "Kühlung an"
+
+msgid "Coolant off"
+msgstr "Kühlung aus"
