--- a/locale/de/LC_MESSAGES/meerk40t.po
+++ b/locale/de/LC_MESSAGES/meerk40t.po
@@ -16827,3 +16827,9 @@ msgstr "Bitte den Airassist für {laser} ausschalten!"
 
 msgid "Does this device has a method to turn on / off a coolant associated to it?"
 msgstr "Unterstützt das Gerät das Ein-/Ausschalten einer Kühlung (Airassist)?"
+
+msgid "Nothing"
+msgstr "Keine Unterstützung"
+
+msgid "Warnmessage"
+msgstr "Warn-Meldung"
