--- a/locale/de/LC_MESSAGES/meerk40t.po
+++ b/locale/de/LC_MESSAGES/meerk40t.po
@@ -16929,3 +16929,48 @@ msgstr "Liste der verfügbaren Zeichensätze"
 #: meerk40t/gui/hersheymanager.py:1160
 msgid "All files"
 msgstr "Alle Dateien"
+
+msgid "Turns on the coolant for the active device"
+msgstr "Schaltet die Kühlung für den aktiven Laser an"
+
+msgid "Turns off the coolant for the active device"
+msgstr "Schaltet die Kühlung für den aktiven Laser aus"
+
+msgid "No coolant method found."
+msgstr "Keine Kühl-Methode gefunden."
+
+msgid "Coolant activated for device {device_label}"
+msgstr "Kühlung für {device_label} eingeschaltet"
+
+msgid "Coolant deactivated for device {device_label}"
+msgstr "Kühlung für {device_label} ausgeschaltet"
+
+msgid "Registered coolant-interfaces:"
+msgstr "Registrierte Kühl-Methoden:"
+
+msgid "Configure"
+msgstr "Konfiguration"
+
+msgid "Coolant on"
+msgstr "Kühlung an"
+
+msgid "Coolant off"
+msgstr "Kühlung aus"
+
+msgid "No coolant method found."
+msgstr "Keine Kühlmethode für den aktiven Laser registriert"
+
+msgid "Please switch the airassist for {laser} on"
+msgstr "Bitte den Airassist für {laser} einschalten!"
+
+msgid "Please switch the airassist for {laser} off"
+msgstr "Bitte den Airassist für {laser} ausschalten!"
+
+msgid "Does this device has a method to turn on / off a coolant associated to it?"
+msgstr "Unterstützt das Gerät das Ein-/Ausschalten einer Kühlung (Airassist)?"
+
+msgid "Nothing"
+msgstr "Keine Unterstützung"
+
+msgid "Warnmessage"
+msgstr "Warn-Meldung"
