--- a/locale/it/LC_MESSAGES/meerk40t.po
+++ b/locale/it/LC_MESSAGES/meerk40t.po
@@ -5813,11 +5813,11 @@ msgstr "Taglia, sposta gli elementi"
 #: meerk40t/gui/navigationpanels.py:190 meerk40t/gui/navigationpanels.py:1855
 #: meerk40t/gui/navigationpanels.py:1864
 msgid "Navigation"
-msgstr "Navigazione"
+msgstr "Muovi/Trasforma"
 
 #: meerk40t/gui/navigationpanels.py:86
 msgid "Jog"
-msgstr "Conduzione"
+msgstr "Muovi"
 
 #: meerk40t/gui/navigationpanels.py:105
 #: meerk40t/gui/statusbarwidgets/selectionwidget.py:23
@@ -6152,11 +6152,11 @@ msgstr "Valore interno effettivo: "
 
 #: meerk40t/gui/navigationpanels.py:1751
 msgid "Jog Distance:"
-msgstr "Larghezza del passo per la Conduzione"
+msgstr "Larghezza del passo per i movimenti"
 
 #: meerk40t/gui/navigationpanels.py:1866
 msgid "Opens Navigation Window"
-msgstr "Apre la finestra di navigazione"
+msgstr "Apre la finestra Muovi/Trasforma"
 
 #: meerk40t/gui/notes.py:18 meerk40t/gui/notes.py:120 meerk40t/gui/notes.py:129
 msgid "Notes"
@@ -10378,6 +10378,7 @@ msgstr "Verrà visualizzato un indicatore di avviso:"
 #: meerk40t/device/gui/warningpanel.py:142
 msgid "in the label of the associated operation-node"
 msgstr "nell'etichetta del nodo del processo associato\n"
+"(NB: I valori di potenza vanno espressi in PPI)\n"
 
 #: meerk40t/grbl/gui/grblconfiguration.py:19
 msgid "GRBL-Configuration"
@@ -12255,7 +12256,7 @@ msgstr ""
 
 #: meerk40t/lihuiyu/gui/lhydrivergui.py:748
 msgid "Rapid Jog"
-msgstr "Guida veloce"
+msgstr "Muovi velocemente"
 
 #: meerk40t/lihuiyu/gui/lhydrivergui.py:756
 msgid "Rapid Moves Between Objects"
@@ -12267,11 +12268,11 @@ msgstr "Movimento rapido tra gli oggetti"
 
 #: meerk40t/lihuiyu/gui/lhydrivergui.py:765
 msgid "Minimum Jog Distance"
-msgstr "Distanza minima per una guida veloce"
+msgstr "Distanza minima per 'muovi velocemente'"
 
 #: meerk40t/lihuiyu/gui/lhydrivergui.py:781
 msgid "Jog Method"
-msgstr "Metodo di guida"
+msgstr "Metodo di movimento"
 
 #: meerk40t/lihuiyu/gui/lhydrivergui.py:782
 msgid "Finish"
@@ -12282,7 +12283,7 @@ msgid ""
 "Changes the method of jogging. Default are NSE jogs. Reset are @NSE jogs."
 " Finished are @FNSE jogs followed by a wait."
 msgstr ""
-"Commuta il metodo di guida.\n"
+"Commuta il metodo di movimento.\n"
 "L'impostazione predefinita è NSE, il ripristino è @NSE e la fine è @FNSE seguita da un periodo di attesa"
 
 #: meerk40t/lihuiyu/gui/lhydrivergui.py:795
@@ -12772,7 +12773,7 @@ msgid "Image Splitting"
 msgstr "Immagini parziali"
 
 msgid "Jog, Move and Transform"
-msgstr "Guida, muove, trasforma"
+msgstr "Muovi/Trasforma"
 
 msgid "Variables + Wordlists"
 msgstr "Variabili + Variabili di testo"
@@ -14238,13 +14239,13 @@ msgid ""
 "the interval between individual executions.\n"
 "A value of 0 will disable this feature."
 msgstr ""
-"Se si fa click e si tiene premuto il pulsante del mouse sui pulsanti del pannello Conduzione"
+"Se si fa click e si tiene premuto il pulsante del mouse sui pulsanti del pannello Movimenti"
 "l'azione di movimento verrà ripetuta. Questo valore stabilisce "
 "l'intervallo tra le singole esecuzioni"
 "Un valore pari a 0 disabilita questa funzione"
 
 msgid "Button-Behaviour"
-msgstr "Comportamento dei pulsanti della modalità 'Guida'"
+msgstr "Comportamento dei pulsanti della modalità 'Muovi'"
 
 msgid "Accelerate repeats"
 msgstr "Accelera le ripetizioni"
@@ -15570,7 +15571,7 @@ msgstr "Prepara il lavoro laser..."
 
 #: ./meerk40t\gui\laserpanel.py:246
 msgid "Rotary active"
-msgstr "Rotante attivo"
+msgstr "Asse ruotante attivo"
 
 #: ./meerk40t\gui\mkdebug.py:35
 msgid "System-Colors"
@@ -15837,11 +15838,11 @@ msgstr "Per applicare le nuove impostazioni è necessario riavviare il programma
 
 #: ./meerk40t\gui\wxmmain.py:560
 msgid "Paste from system\tShift-Ctrl-V"
-msgstr "Appunti di sistema\tShift-Ctrl-V"
+msgstr "Incolla dalla clipboard di sistema\tShift-Ctrl-V"
 
 #: ./meerk40t\gui\wxmmain.py:561
 msgid "Paste data coming from other applications"
-msgstr "Incolla dalla clipboard di sistema"
+msgstr "Incolla i dati provenienti da altre applicazioni"
 
 #: ./meerk40t\gui\wxmmain.py:1350
 msgid "Right click removes the hatch)"
@@ -16570,7 +16571,7 @@ msgstr "- I Processi raster sono troppo rapidi"
 
 #: ./meerk40t\gui\gui_mixins.py:395
 msgid "- Elements are lying outside the burnable area."
-msgstr "- L'elemento si trova (parzialmente) al di fuori dell'area infiammabile"
+msgstr "- L'elemento si trova (parzialmente) al di fuori dell'area di lavoro"
 
 #: ./meerk40t\gui\gui_mixins.py:397
 msgid "Could lead to the laserhead bumping into the rails."
@@ -18729,3 +18730,303 @@ msgstr "Click sinistro: Passa al panello successivo"
 
 msgid "Right Click: Move to previous panel"
 msgstr "Click destro: Passa al pannello precedente"
+
+#: meerk40t/gui/statusbarwidgets/statusbar.py:42
+msgid "Left Click: Move to next panel\nRight Click: Move to previous panel"
+msgstr "Click sinistro: Passa al pannello successivo\n Click destro: Passa al pannello precedente"
+
+#: meerk40t/gui/propertypanels/placementproperty.py:205
+msgid "Repetitions to use (0=all)"
+msgstr "Ripetizioni da utilizzare (0=tutto)"
+
+#: meerk40t/gui/propertypanels/placementproperty.py:204
+msgid "First repetition to use"
+msgstr "Prima ripetizione da usare"
+
+#: meerk40t/gui/propertypanels/placementproperty.py:184
+msgid "Start-Index:"
+msgstr "Indice di inizio:"
+
+#: meerk40t/gui/propertypanels/operationpropertymain.py:1269
+msgid "In a raster engrave, the step size is the distance between raster lines in 1/1000\" "
+msgstr "In un'incisione raster, la dimensione del gradino è la distanza tra le linee raster in 1/1000\"
+
+#: meerk40t/gui/wxmmain.py:1231
+msgid "NB: This applies only for time-consuming updates"
+msgstr "NB: Questo vale solo per gli aggiornamenti che richiedono molto tempo"
+
+#: meerk40t/gui/wxmmain.py:1229
+msgid "otherwise they will get applied only after you release the mouse button."
+msgstr "altrimenti verranno applicate solo dopo aver rilasciato il pulsante del mouse"
+
+#: meerk40t/gui/wxmmain.py:1225
+msgid "Try to immediately use values while you drag a slider -"
+msgstr "Cercare di utilizzare immediatamente i valori mentre si trascina un cursore"
+
+#: meerk40t/gui/wxmmain.py:1224
+msgid "Process input while moving slider handle"
+msgstr "Elaborazione dell'input durante lo spostamento della maniglia di scorrimento"
+
+#: meerk40t/gui/wxmmain.py:160
+msgid "How often should MeerK40t save the current workspace"
+msgstr "Con quale frequenza MeerK40t deve salvare l'area di lavoro corrente"
+
+#: meerk40t/gui/wxmmain.py:157
+msgid "Every 10 minutes"
+msgstr "Ogni 10 minuti"
+
+#: meerk40t/gui/wxmmain.py:156
+msgid "Every 5 minutes"
+msgstr "Ogni 5 minuti"
+
+#: meerk40t/gui/wxmmain.py:155
+msgid "Every minute"
+msgstr "Ogni minuto"
+
+#: meerk40t/gui/wxmmain.py:154
+msgid "Every 30 seconds"
+msgstr "Ogni 30 secondi"
+
+#: meerk40t/gui/wxmmain.py:142
+msgid "If active then the current workspace will be saved every x minutes\nFilename: {file}"
+msgstr "Se attivo, l'area di lavoro corrente verrà salvata ogni x minuti\nFilename: {file}"
+
+#: meerk40t/gui/wxmmain.py:139
+msgid "Autosave workspace"
+msgstr "Salvataggio automatico dell'area di lavoro"
+
+#: meerk40t/gui/plugin.py:248
+msgid "(Yes={yes})"
+msgstr "(Sì={yes})"
+
+#: meerk40t/extra/param_functions.py:1342
+msgid "growingshape sx sy sides iterations"
+msgstr "forma crescente sx sy lati iterazioni"
+
+#: meerk40t/extra/param_functions.py:1339
+msgid "Delta angle between moves in degrees"
+msgstr "Angolo delta tra gli spostamenti in gradi"
+
+#: meerk40t/extra/param_functions.py:1098
+msgid "Just for info: we have missed a couple of vertices..."
+msgstr "Solo per informazione: abbiamo saltato un paio di vertici..."
+
+#: meerk40t/extra/param_functions.py:725
+msgid "cycloid sx sy r_major r_minor iterations"
+msgstr "cicloide sx sy r_maggiore r_minore iterazioni"
+
+#: meerk40t/extra/param_functions.py:584
+msgid "fractal_dragon sx, sy, step, iterations"
+msgstr "frattale drago sx, sy, passo, iterazioni"
+
+#: meerk40t/extra/param_functions.py:459
+msgid "fractal_tree sx, sy, branch, iterations"
+msgstr "albero frattale sx, sy, ramo, iterazioni"
+
+#: meerk40t/extra/param_functions.py:438
+msgid "ffractal iterations"
+msgstr "iterazioni ffrattali"
+
+#: meerk40t/extra/param_functions.py:252
+msgid "tfractal iterations"
+msgstr "iterazioni tfrattali"
+
+#: meerk40t/extra/coolant.py:285
+msgid "Coolant deactivated for device {device_label}"
+msgstr "Refrigeratore disattivato per il dispositivo {device_label}"
+
+#: meerk40t/extra/coolant.py:265
+msgid "Turns off the coolant for the active device"
+msgstr "Disattiva il refrigeratore per il dispositivo attivo"
+
+#: meerk40t/extra/coolant.py:263
+msgid "No coolant method found."
+msgstr "Non è stato trovato alcun metodo di raffreddamento"
+
+#: meerk40t/extra/coolant.py:261
+msgid "Coolant activated for device {device_label}"
+msgstr "Liquido di raffreddamento attivato per il dispositivo {device_label}"
+
+#: meerk40t/extra/coolant.py:241
+msgid "Turns on the coolant for the active device"
+msgstr "Attiva il refrigeratore per il dispositivo attivo"
+
+#: meerk40t/extra/coolant.py:239
+msgid "There are no coolant-interfaces known to MeerK40t"
+msgstr "Non ci sono interfacce per il refrigeratore note a MeerK40t"
+
+#: meerk40t/extra/coolant.py:236
+msgid "{name}: {devices}"
+msgstr ""
+
+#: meerk40t/extra/coolant.py:234
+msgid "Not used"
+msgstr "Non utilizzato"
+
+#: meerk40t/extra/coolant.py:226
+msgid "Registered coolant-interfaces:"
+msgstr "Interfacce refrigeranti registrate:"
+
+#: meerk40t/extra/coolant.py:220
+msgid "displays registered coolant methods"
+msgstr "visualizza i metodi di raffreddamento registrati"
+
+#: meerk40t/extra/coolant.py:217
+msgid "GCode M7/M9"
+msgstr ""
+
+#: meerk40t/extra/coolant.py:218
+msgid "GCode M8/M9"
+msgstr ""
+
+#: meerk40t/extra/coolant.py:216
+msgid "Warnmessage"
+msgstr "Messaggio di avviso"
+
+#: meerk40t/extra/coolant.py:202
+msgid "Air-Assist"
+msgstr "Assistenza ad aria"
+
+#: meerk40t/extra/coolant.py:201
+msgid "Please switch the airassist for {laser} off"
+msgstr "Disattivare l'assistenza ad aria per {laser}"
+
+#: meerk40t/extra/coolant.py:199
+msgid "Please switch the airassist for {laser} on"
+msgstr "Attivare l'assistenza ad aria per {laser}"
+
+#: meerk40t/extra/coolant.py:165
+msgid "Nothing"
+msgstr "Niente"
+
+#: meerk40t/cylinder/gui/gui.py:24
+msgid "Opens Cylinder Window"
+msgstr ""
+
+#: meerk40t/cylinder/gui/gui.py:22
+msgid "Cylinder"
+msgstr "Cilindro"
+
+#: meerk40t/cylinder/gui/cylindersettings.py:22
+msgid "Cylinder-Correction"
+msgstr "Correzione del cilindro"
+
+#: meerk40t/cylinder/cylinder.py:86 meerk40t/cylinder/cylinder.py:96 meerk40t/cylinder/cylinder.py:106
+msgid "Y Axis"
+msgstr "Asse Y"
+
+#: meerk40t/cylinder/cylinder.py:84
+msgid "Cylinder along Y-Axis"
+msgstr "Cilindro lungo l'asse Y"
+
+#: meerk40t/cylinder/cylinder.py:83
+msgid "Axis Y"
+msgstr "Asse Y"
+
+#: meerk40t/cylinder/cylinder.py:74 meerk40t/cylinder/cylinder.py:104
+msgid "Cylinder is concave rather than convex"
+msgstr "Il cilindro è concavo anziché convesso"
+
+#: meerk40t/cylinder/cylinder.py:73 meerk40t/cylinder/cylinder.py:103
+msgid "Cylinder is Concave"
+msgstr "Il cilindro è concavo"
+
+#: meerk40t/cylinder/cylinder.py:64 meerk40t/cylinder/cylinder.py:94
+msgid "Diameter of the object being engraved"
+msgstr "Diametro dell'oggetto da incidere"
+
+#: meerk40t/cylinder/cylinder.py:63 meerk40t/cylinder/cylinder.py:93
+msgid "Cylinder Diameter"
+msgstr "Diametro del cilindro"
+
+#: meerk40t/cylinder/cylinder.py:56 meerk40t/cylinder/cylinder.py:66 meerk40t/cylinder/cylinder.py:76
+msgid "X Axis"
+msgstr "Asse X"
+
+#: meerk40t/cylinder/cylinder.py:54
+msgid "Cylinder along X-Axis"
+msgstr "Cilindro lungo l'asse X"
+
+#: meerk40t/cylinder/cylinder.py:53
+msgid "Axis X"
+msgstr "Asse X"
+
+#: meerk40t/cylinder/cylinder.py:44
+msgid "Distance from cylinder to mirror"
+msgstr "Distanza dal cilindro allo specchio"
+
+#: meerk40t/cylinder/cylinder.py:43
+msgid "Mirror Distance"
+msgstr "Distanza dello specchio"
+
+#: meerk40t/cylinder/cylinder.py:36
+msgid "Is the cylinder correction mode active for this device"
+msgstr "La modalità di correzione del cilindro è attiva per questo dispositivo"
+
+#: meerk40t/cylinder/cylinder.py:35
+msgid "Cylinder-Correction-Mode active"
+msgstr "Modalità correzione cilindri attiva"
+
+#: meerk40t/core/planner.py:409
+msgid "plan(-selected)<?> copy"
+msgstr "piano(-selected)<?> copia"
+
+#: meerk40t/balormk/device.py:251 meerk40t/grbl/device.py:431 meerk40t/lihuiyu/device.py:179 meerk40t/moshi/device.py:192 meerk40t/newly/device.py:500 meerk40t/ruida/device.py:232
+msgid "Coolant Support"
+msgstr "Supporto del refrigeratore"
+
+#: meerk40t/balormk/device.py:250 meerk40t/grbl/device.py:430 meerk40t/lihuiyu/device.py:178 meerk40t/moshi/device.py:191 meerk40t/newly/device.py:499 meerk40t/ruida/device.py:231
+msgid "Does this device has a method to turn on / off a coolant associated to it?"
+msgstr "Questo dispositivo ha un metodo per attivare/disattivare un refrigeratore ad esso associato?"
+
+#: meerk40t/balormk/device.py:249 meerk40t/grbl/device.py:429 meerk40t/lihuiyu/device.py:177 meerk40t/moshi/device.py:190 meerk40t/newly/device.py:498 meerk40t/ruida/device.py:230
+msgid "Coolant"
+msgstr "Refrigerante"
+
+#: translate_check.py:22
+msgid "another test for \"
+msgstr "un altro test per \"
+
+#: meerk40t/balormk/device.py:194 meerk40t/grbl/device.py:105 meerk40t/lihuiyu/device.py:95 meerk40t/moshi/device.py:114 meerk40t/newly/device.py:147 meerk40t/ruida/device.py:94
+msgid "X-Margin"
+msgstr "Margine X"
+
+#: meerk40t/balormk/device.py:197 meerk40t/grbl/device.py:108 meerk40t/lihuiyu/device.py:98 meerk40t/moshi/device.py:117 meerk40t/newly/device.py:150 meerk40t/ruida/device.py:97
+msgid "Margin for the X-axis. This will be a kind of unused space at the left side."
+msgstr "Margine per l'asse X. Si tratta di una sorta di spazio inutilizzato sul lato sinistro."
+
+#: meerk40t/balormk/device.py:199 meerk40t/lihuiyu/device.py:100 meerk40t/ruida/device.py:98
+msgid "User Offset"
+msgstr "Offset Utente"
+
+#: meerk40t/balormk/device.py:207 meerk40t/grbl/device.py:116 meerk40t/lihuiyu/device.py:108 meerk40t/moshi/device.py:126 meerk40t/newly/device.py:159 meerk40t/ruida/device.py:107
+msgid "Y-Margin"
+msgstr "Margine Y"
+
+#: meerk40t/balormk/device.py:210 meerk40t/grbl/device.py:119 meerk40t/lihuiyu/device.py:111 meerk40t/moshi/device.py:129 meerk40t/newly/device.py:162 meerk40t/ruida/device.py:110
+msgid "Margin for the Y-axis. This will be a kind of unused space at the top."
+msgstr "Margine per l'asse Y. Si tratta di una sorta di spazio inutilizzato in alto"
+
+#: meerk40t/gui/basicops.py:584
+msgid "Set coolant to on/off or leave unchanged (default)"
+msgstr "Imposta il refrigerante su on/off o lasciare invariato (default)"
+
+#: meerk40t/gui/propertypanels/operationpropertymain.py:658
+msgid "Coolant:"
+msgstr "Liquido di raffreddamento"
+
+#: meerk40t/gui/propertypanels/operationpropertymain.py:660
+msgid "No changes"
+msgstr "Nessuna modifica"
+
+#: meerk40t/gui/propertypanels/operationpropertymain.py:660
+msgid "Turn on"
+msgstr "Accende"
+
+#: meerk40t/gui/propertypanels/operationpropertymain.py:660
+msgid "Turn off"
+msgstr "Spegne"
+
+#: meerk40t/gui/propertypanels/operationpropertymain.py:670
+msgid "Define whether coolant support shall be explicitly turned on or off at the start of the operation, or whether it should be left at its current state."
+msgstr "Definisce se il supporto del refrigerante deve essere esplicitamente attivato o disattivato all'inizio dell'operazione o se deve essere lasciato allo stato attuale"
